fix: doesnt work on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,19 +5,26 @@
 @layer utilities {
   .perspective-1000 {
     perspective: 1000px;
+    -webkit-perspective: 1000px;
+    -moz-perspective: 1000px;
   }
 
   .preserve-3d {
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
   }
 
   .rotate-y-180 {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
   }
 
   .backface-hidden {
     backface-visibility: hidden;
-    --webkit-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
   }
 }
 
